--- a/pages/Auth/style/index.css
+++ b/pages/Auth/style/index.css
@@ -7,13 +7,13 @@
     -webkit-tap-highlight-color: transparent;
 }
 
-input, input:before, input:after {
+/* input, input:before, input:after {
    -webkit-user-select: initial;
    -khtml-user-select: initial;
    -moz-user-select: initial;
    -ms-user-select: initial;
    user-select: initial;
-  }
+  } */
 
 body {
     font-family: 'Montserrat', sans-serif;
