--- a/style.css
+++ b/style.css
@@ -87,20 +87,20 @@ nav svg {
 	transition: 0.3s ease all;
 }
 
-button,
+/* button,
 textarea,
 input,
 select,
 a {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	-webkit-tap-highlight-color: transparent;
-	/* -webkit-user-select: none;
+	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
-   user-select: none; */
+   user-select: none;
    -webkit-user-select: initial;
    -khtml-user-select: initial;
    -moz-user-select: initial;
    -ms-user-select: initial;
    user-select: initial;
-}
+} */
