--- a/pages/Auth/style/index.css
+++ b/pages/Auth/style/index.css
@@ -79,7 +79,7 @@ nav svg {
     transition: 0.3s ease all;
 }
 
-button,
+/* button,
 textarea,
 input,
 select,
@@ -90,7 +90,7 @@ a {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-}
+} */
 
 .bg-circle {
     background: url('../svg/bg.svg'), #4649a0;
